# haskell-bitmex

./: .gitignore  .hindent.yaml  .stylish-haskell.yaml  Example.hs  README.md  cabal.project  stack.yaml
api-wrapper/: api-wrapper.cabal
api-wrapper/lib/: BitMEXWrapper.hs
api-wrapper/lib/BitMEXWrapper/: Type.hs  Wrapper.hs
client/: .ghcid  ChangeLog.md  LICENSE  README.md  haskell-bitmex-client.cabal
client/benchmarks/: Benchmark.hs
client/example/: Example.hs
client/lib/: BitMEXClient.hs
client/lib/BitMEXClient/: CustomPrelude.hs  WebSockets.hs  Wrapper.hs
client/lib/BitMEXClient/WebSockets/: API.hs  Types.hs
client/lib/BitMEXClient/WebSockets/Types/: General.hs  Request.hs  Response.hs
client/lib/BitMEXClient/Wrapper/: API.hs  Logger.hs  Logging.hs  Retry.hs  Types.hs  Util.hs
client/test/: Test.hs
rest/: .gitignore  README.md  bitmex.cabal  haskell-bitmex-rest.cabal  swagger.yaml
rest/docs/: BitMEX-API.html  BitMEX-Client.html  BitMEX-Core.html  BitMEX-Logging.html  BitMEX-MimeTypes.html  BitMEX-Model.html  BitMEX-ModelLens.html  BitMEX.html  bitmex.txt  doc-index-45.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index-X.html  doc-index.html  index.html
rest/docs/src/: BitMEX.API.html  BitMEX.Client.html  BitMEX.Core.html  BitMEX.Logging.html  BitMEX.MimeTypes.html  BitMEX.Model.html  BitMEX.ModelLens.html  BitMEX.html  Paths_bitmex.html
rest/lib/: BitMEX.hs
rest/lib/BitMEX/: API.hs  Client.hs  Core.hs  Logging.hs  MimeTypes.hs  Model.hs  ModelLens.hs
rest/tests/: Instances.hs  PropMime.hs  Test.hs
wrapper/: .ghcid  ChangeLog.md  haskell-bitmex-wrapper.cabal
wrapper/example/: Example.hs
wrapper/lib/: BitMEXWrapper.hs
wrapper/lib/BitMEXWrapper/: Types.hs  Wrapper.hs
ws/: .ghcid  ChangeLog.md  haskell-bitmex-ws.cabal
ws/lib/: BitMEXWebSockets.hs
ws/lib/BitMEXWebSockets/: API.hs  Type.hs  Types.hs
ws/lib/BitMEXWebSockets/Types/: General.hs  Request.hs  Response.hs
