-- The name of the package.
name:                haskell-bitmex-client

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Lucsanszky

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          dan.lucsanszky@gmail.com

-- A copyright notice.
-- copyright:

category:            Web

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:    BitMEXClient

  -- Modules included in this library but not exported.
  other-modules: BitMEXClient.CustomPrelude
               , BitMEXClient.WebSockets
               , BitMEXClient.Wrapper
               , BitMEXClient.WebSockets.API
               , BitMEXClient.WebSockets.Types
               , BitMEXClient.WebSockets.Types.General
               , BitMEXClient.WebSockets.Types.Request
               , BitMEXClient.WebSockets.Types.Response
               , BitMEXClient.Wrapper.API
               , BitMEXClient.Wrapper.Types

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:


  ghc-options: -Wall
               -O2
               -funbox-strict-fields
               -fwarn-unused-imports
               -Wcompat
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wredundant-constraints

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.10 && <4.11
                     , mtl >=2.2.1
                     , aeson >=1.0 && <2.0
                     , bytestring >=0.10.0 && <0.11
                     , bytestring-conversion >= 0.3
                     , cryptonite >= 0.25
                     , http-client >=0.5 && <0.6
                     , http-client-tls >= 0.3
                     , katip >= 0.5
                     , memory >= 0.14
                     , text >=0.11 && <1.3
                     , time >=1.5 && <1.9
                     , haskell-bitmex-rest
                     , safe-exceptions <0.2
                     , network >= 2.6
                     , vector >=0.10.9 && <0.13
                     , websockets >= 0.12
                     , wuss >= 1.1

  -- Directories containing source files.
  hs-source-dirs:      lib

  -- Base language which the package is written in.
  default-language:    Haskell2010

  default-extensions:  DeriveGeneric
                       DuplicateRecordFields
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       NoImplicitPrelude
                       OverloadedStrings
                       RankNTypes
                       RecordWildCards

executable example
  hs-source-dirs:      example
  main-is:             Example.hs
  build-depends:       base >=4.10 && <4.11
                     , mtl >=2.2.1
                     , aeson >=1.0 && <2.0
                     , bytestring >=0.10.0 && <0.11
                     , haskell-bitmex-rest
                     , haskell-bitmex-client
                     , http-client >=0.5 && <0.6
                     , http-client-tls >= 0.3
                     , katip >= 0.5
                     , text >=0.11 && <1.3
                     , time >=1.5 && <1.9
                     , websockets >= 0.12

  default-language:    Haskell2010
